# nexsure-api

./: .gitignore  LICENSE  README.md  demo.ipynb  pyproject.toml
nexsure_api/: base_api_client.py  constants.py  credentials.py  enums.py  http_client.py  input_models.py  models.py  nexsure_api_client.py  service_factory.py  types.py
nexsure_api/services/: abstract_service.py
nexsure_api/services/services/add_attachment/: __init__.py  model.py  service.py
nexsure_api/services/services/add_new_client/: __init__.py  model.py  service.py
nexsure_api/services/services/add_single_policy/: __init__.py  model.py  service.py
nexsure_api/services/services/claim_search/: __init__.py  model.py  service.py
nexsure_api/services/services/client_search/: __init__.py  model.py  service.py
nexsure_api/services/services/get_attachment_list/: __init__.py  model.py  service.py
nexsure_api/services/services/get_client_by_id/: __init__.py  model.py  service.py
nexsure_api/services/services/get_client_by_name/: __init__.py  model.py  service.py
nexsure_api/services/services/get_client_list/: __init__.py  model.py  service.py
nexsure_api/services/services/get_token/: __init__.py  model.py  service.py
nexsure_api/services/services/list_lookup_management_values/: __init__.py  model.py  service.py
nexsure_api/services/services/load_policy_by_client_id/: __init__.py  model.py  service.py
nexsure_api/services/services/load_policy_by_policy_id/: __init__.py  model.py  service.py
nexsure_api/services/services/policy_load/: __init__.py  model.py  service.py
(+15 files in other folders)
