[build-system]
requires = ["setuptools>=71", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexsure-api"
version = "0.1.0"
description = "Python client library for the Nexsure EAI API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
    "requests",
]

[project.urls]
Repository = "https://github.com/arturnawrot/nexsure-api"
